feature(pagination): Добавил схемы и обновил свагер для пагинации.
